Try fix z-index

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,3 +6,11 @@ $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helve
 $base-font-size:   18px;
 
 @import "minima";
+
+.site-header {
+    z-index: 2;
+}
+
+.page-content {
+    z-index: 1;
+}
